gap fixed

--- a/assets/section-myduke-faq-page.css
+++ b/assets/section-myduke-faq-page.css
@@ -153,7 +153,7 @@
 .myduke-faq-page__form-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1.6rem;
+  gap: 3.2rem;
   position: sticky;
   top: 2.4rem;
 }
